--- a/places_youve_been.html
+++ b/places_youve_been.html
@@ -7,25 +7,33 @@
        <script src="js/scripts.js"></script>
   </head>
   <body>
-    <div class="jumbotron">
+    <!-- <div class="jumbotron"> -->
       <div class="container">
         <h1>Places You've Been</h1>
         <p class="lead">Insert a location, a landmark, a date, and some travel notes to add as a place.<br></p>
         <form id="new-place">
           <div class="form-group">
-            <label for="input-location"><b>Location:</b></label>
-            <input id="input-location" type="text">
+
+            <div class="input-group input-group-lg">
+              <span class="input-group-addon" id="sizing-addon1">Location</span>
+              <input type="text" id="input-location" class="form-control" placeholder="Hawaii" aria-describedby="sizing-addon1">
+            </div>
+
           </div>
           <div class="form-group">
             <div id="new-details">
-              <div class="new-detail">
-                <label for="input-landmark"><b>Landmark:</b></label>
-                <input class="form-control input-landmark" type="text">
-                <label for="input-date"><b>Date:</b></label>
-                <input class="form-control input-date" type="text">
-                <label for="input-notes"><b>Notes:</b></label>
-                <input class="form-control input-notes" type="text">
-              </div>
+              <div class="form-group">
+                <div class="new-detail input-group input-group-lg">
+                  <span class="input-group-addon" id="sizing-addon1">Landmark</span>
+                  <input type="text" id="input-landmark" class="form-control" placeholder="Waterfall" aria-describedby="sizing-addon1">
+
+                  <span class="input-group-addon" id="sizing-addon1">Date</span>
+                  <input type="text" id="input-date" class="form-control" placeholder="Someday" aria-describedby="sizing-addon1">
+
+                  <span class="input-group-addon" id="sizing-addon1">Notes</span>
+                  <input type="text" id="input-notes" class="form-control" placeholder="Awesome" aria-describedby="sizing-addon1">
+                 </div>
+             </div>
             </div>
           </div>
           <div id="result">
@@ -35,7 +43,7 @@
           <button type="submit" class="btn btn-lg btn-success">Submit</button>
         </div>
       </form>
-    </div>
+    <!-- </div> -->
 
     <div class="container">
 
